maep (1.3.6) unstable; urgency=low

  * Fixed track state restore bug
  * Fixed some portrait issue in about dialog

 -- Till Harbaum <till@harbaum.org>  Thu, 20 May 2010 20:36:36 +0200

maep (1.3.5) unstable; urgency=low

  * portrait mode / auto rotation
  * Fixed search entry focus bug

 -- Till Harbaum <till@harbaum.org>  Wed, 19 May 2010 19:17:56 +0200

maep (1.3.4) unstable; urgency=low

  * Started work on track graph (not yet finished/enabled)
  * Applied patch [#5562] Memory leak
  * HXM heart rate monitor support
  * Extended altitude and heart rate/cadence support for tracks
  * Fixed [#5604] Support for loading gpx files with multiple tracks
  * Fixed [#5515] Maep drains battery & slows down device by ...
  * Applied [#5329] This patch adds new "Double Pixel" functionality ...
  * Added Double-Pixel GUI to OSD
  * Fixed [#5101] Hardware +/- do not zoom when search bar is open
  * Implemented solution for [#5674] Updating the map storage in the device.
  * Fixed [#5608] Track loss after device shutdown
  * Only include positions < 100m accuracy into tracks
  * Fixed [#5703] Screensaver kicks in when driving

 -- Till Harbaum <till@harbaum.org>  Thu, 25 Mar 2010 21:27:49 +0100

maep (1.3.3) unstable; urgency=low

  * Release gps auto center when api is being used to change map center

 -- Till Harbaum <till@harbaum.org>  Fri, 29 Jan 2010 20:42:48 +0100

maep (1.3.2) unstable; urgency=low

  * Fixed crash when wikipedia was disabled while balloon was visible
  * Fixed bug tracker link
  * Screensaver disabled only when map has focus
  * GPS framework simplified and reduced power consumption
  * Reduced "drag" threshold

 -- Till Harbaum <till@harbaum.org>  Wed, 27 Jan 2010 09:09:13 +0100

maep (1.3.1) unstable; urgency=low

  * Inclusion of altitude from GPS into track
  * Closed icon memory leak
  * Allow cancellation of search

 -- Till Harbaum <till@harbaum.org>  Sun, 24 Jan 2010 20:47:58 +0100

maep (1.3) unstable; urgency=low
